battleship-authorizer/argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
  namespace: battleships
  labels:
    app: ms-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers: 
        - name: ms-auth
          image: ghcr.io/eugenioff/ms-auth:latest
          ports:
            - containerPort: 8000
