battleship-authorizer/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-auth
  namespace: battleships

spec:
  selector:
    app: ms-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
