battleship-authorizer/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-auth-ingress
  namespace: battleships
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: ms-auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-auth
                port:
                  number: 80
